tests/errors/type_check_pattern_match.err
Type Error: Trying to pattern match value of type `foo` with constructor `Y(int) -> bar`
5:   let Y(y) = x {
          ^
